// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser should-work-with-arrays 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 26,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 21,
        "expression": Object {
          "__debugKind": "ArraysExpression",
          "defaultValue": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 14,
            "kind": 35,
            "pos": 12,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 13,
              "fullPos": 11,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 12,
              "value": "0",
            },
          },
          "end": 21,
          "kind": 38,
          "length": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 11,
            "kind": 35,
            "pos": 8,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 10,
              "fullPos": 8,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 8,
              "value": "10",
            },
          },
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 26,
        "expression": Object {
          "__debugKind": "ArraysExpression",
          "defaultValue": undefined,
          "end": 26,
          "kind": 38,
          "length": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 26,
            "kind": 35,
            "pos": 23,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 25,
              "fullPos": 23,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 23,
              "value": "10",
            },
          },
          "pos": 15,
        },
        "kind": 57,
        "pos": 15,
      },
    ],
  },
  "end": 26,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 26,
    "fullPos": 26,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 26,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-binary-shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 84,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "GlobalVariableStatement",
        "end": 13,
        "initializer": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 13,
          "kind": 35,
          "pos": 8,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 9,
            "fullPos": 7,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 8,
            "value": "1",
          },
        },
        "kind": 55,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 5,
          "fullPos": 3,
          "id": "x",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 4,
        },
        "pos": 0,
      },
      Object {
        "__debugKind": "GlobalVariableStatement",
        "end": 22,
        "initializer": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 22,
          "kind": 35,
          "pos": 18,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 19,
            "fullPos": 17,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 18,
            "value": "2",
          },
        },
        "kind": 55,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 15,
          "fullPos": 13,
          "id": "y",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 14,
        },
        "pos": 10,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 28,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 28,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 24,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 22,
              "fullPos": 19,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 21,
            },
            "kind": 36,
            "pos": 21,
          },
          "operator": Object {
            "__debugKind": "AddToken",
            "end": 24,
            "fullPos": 22,
            "kind": 9,
            "leadingIndent": 0,
            "pos": 23,
          },
          "pos": 21,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 28,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 26,
              "fullPos": 24,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 25,
            },
            "kind": 36,
            "pos": 25,
          },
        },
        "kind": 57,
        "pos": 21,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 34,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 34,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 30,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 28,
              "fullPos": 26,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 27,
            },
            "kind": 36,
            "pos": 27,
          },
          "operator": Object {
            "__debugKind": "SubToken",
            "end": 30,
            "fullPos": 28,
            "kind": 10,
            "leadingIndent": 0,
            "pos": 29,
          },
          "pos": 27,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 34,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 32,
              "fullPos": 30,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 31,
            },
            "kind": 36,
            "pos": 31,
          },
        },
        "kind": 57,
        "pos": 27,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 40,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 40,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 36,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 34,
              "fullPos": 32,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 33,
            },
            "kind": 36,
            "pos": 33,
          },
          "operator": Object {
            "__debugKind": "MulToken",
            "end": 36,
            "fullPos": 34,
            "kind": 11,
            "leadingIndent": 0,
            "pos": 35,
          },
          "pos": 33,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 40,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 38,
              "fullPos": 36,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 37,
            },
            "kind": 36,
            "pos": 37,
          },
        },
        "kind": 57,
        "pos": 33,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 46,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 46,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 42,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 40,
              "fullPos": 38,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 39,
            },
            "kind": 36,
            "pos": 39,
          },
          "operator": Object {
            "__debugKind": "DivToken",
            "end": 42,
            "fullPos": 40,
            "kind": 12,
            "leadingIndent": 0,
            "pos": 41,
          },
          "pos": 39,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 46,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 44,
              "fullPos": 42,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 43,
            },
            "kind": 36,
            "pos": 43,
          },
        },
        "kind": 57,
        "pos": 39,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 52,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 52,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 48,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 46,
              "fullPos": 44,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 45,
            },
            "kind": 36,
            "pos": 45,
          },
          "operator": Object {
            "__debugKind": "ModToken",
            "end": 48,
            "fullPos": 46,
            "kind": 13,
            "leadingIndent": 0,
            "pos": 47,
          },
          "pos": 45,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 52,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 50,
              "fullPos": 48,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 49,
            },
            "kind": 36,
            "pos": 49,
          },
        },
        "kind": 57,
        "pos": 45,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 58,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 58,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 54,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 52,
              "fullPos": 50,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 51,
            },
            "kind": 36,
            "pos": 51,
          },
          "operator": Object {
            "__debugKind": "LessThanToken",
            "end": 54,
            "fullPos": 52,
            "kind": 14,
            "leadingIndent": 0,
            "pos": 53,
          },
          "pos": 51,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 58,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 56,
              "fullPos": 54,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 55,
            },
            "kind": 36,
            "pos": 55,
          },
        },
        "kind": 57,
        "pos": 51,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 64,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 64,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 60,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 58,
              "fullPos": 56,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 57,
            },
            "kind": 36,
            "pos": 57,
          },
          "operator": Object {
            "__debugKind": "GreaterThanToken",
            "end": 60,
            "fullPos": 58,
            "kind": 15,
            "leadingIndent": 0,
            "pos": 59,
          },
          "pos": 57,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 64,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 62,
              "fullPos": 60,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 61,
            },
            "kind": 36,
            "pos": 61,
          },
        },
        "kind": 57,
        "pos": 57,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 71,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 71,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 67,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 64,
              "fullPos": 62,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 63,
            },
            "kind": 36,
            "pos": 63,
          },
          "operator": Object {
            "__debugKind": "LessEqualsThanToken",
            "end": 67,
            "fullPos": 64,
            "kind": 16,
            "leadingIndent": 0,
            "pos": 65,
          },
          "pos": 63,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 71,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 69,
              "fullPos": 67,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 68,
            },
            "kind": 36,
            "pos": 68,
          },
        },
        "kind": 57,
        "pos": 63,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 78,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 78,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 74,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 71,
              "fullPos": 69,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 70,
            },
            "kind": 36,
            "pos": 70,
          },
          "operator": Object {
            "__debugKind": "GreaterEqualsThanToken",
            "end": 74,
            "fullPos": 71,
            "kind": 17,
            "leadingIndent": 0,
            "pos": 72,
          },
          "pos": 70,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 78,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 76,
              "fullPos": 74,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 75,
            },
            "kind": 36,
            "pos": 75,
          },
        },
        "kind": 57,
        "pos": 70,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 84,
        "expression": Object {
          "__debugKind": "BinaryShorthand",
          "end": 84,
          "kind": 58,
          "left": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 81,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 78,
              "fullPos": 76,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 77,
            },
            "kind": 36,
            "pos": 77,
          },
          "operator": Object {
            "__debugKind": "EqualsEqualsToken",
            "end": 81,
            "fullPos": 78,
            "kind": 18,
            "leadingIndent": 0,
            "pos": 79,
          },
          "pos": 77,
          "right": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 84,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 83,
              "fullPos": 81,
              "id": "y",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 82,
            },
            "kind": 36,
            "pos": 82,
          },
        },
        "kind": 57,
        "pos": 77,
      },
    ],
  },
  "end": 84,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 84,
    "fullPos": 83,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 83,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-function 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 27,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "FunctionStatement",
        "body": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 27,
          "kind": 53,
          "pos": 22,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 27,
              "expression": Object {
                "__debugKind": "BinaryShorthand",
                "end": 27,
                "kind": 58,
                "left": Object {
                  "__debugKind": "VariableReferenceExpression",
                  "end": 25,
                  "id": Object {
                    "__debugKind": "Identifier",
                    "end": 23,
                    "fullPos": 17,
                    "id": "x",
                    "kind": 21,
                    "leadingIndent": 4,
                    "pos": 22,
                  },
                  "kind": 36,
                  "pos": 22,
                },
                "operator": Object {
                  "__debugKind": "AddToken",
                  "end": 25,
                  "fullPos": 23,
                  "kind": 9,
                  "leadingIndent": 4,
                  "pos": 24,
                },
                "pos": 22,
                "right": Object {
                  "__debugKind": "VariableReferenceExpression",
                  "end": 27,
                  "id": Object {
                    "__debugKind": "Identifier",
                    "end": 27,
                    "fullPos": 25,
                    "id": "y",
                    "kind": 21,
                    "leadingIndent": 4,
                    "pos": 26,
                  },
                  "kind": 36,
                  "pos": 26,
                },
              },
              "kind": 54,
              "pos": 22,
            },
          ],
        },
        "end": 27,
        "kind": 56,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 6,
          "fullPos": 4,
          "id": "f",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 5,
        },
        "params": Array [
          Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          Object {
            "__debugKind": "Identifier",
            "end": 11,
            "fullPos": 9,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 10,
          },
          Object {
            "__debugKind": "Identifier",
            "end": 14,
            "fullPos": 12,
            "id": "z",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 13,
          },
        ],
        "pos": 0,
      },
    ],
  },
  "end": 27,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 27,
    "fullPos": 27,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 27,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-function-call 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 23,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "FunctionStatement",
        "body": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 19,
          "kind": 53,
          "pos": 15,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 19,
              "expression": Object {
                "__debugKind": "VariableReferenceExpression",
                "end": 19,
                "id": Object {
                  "__debugKind": "Identifier",
                  "end": 16,
                  "fullPos": 10,
                  "id": "v",
                  "kind": 21,
                  "leadingIndent": 4,
                  "pos": 15,
                },
                "kind": 36,
                "pos": 15,
              },
              "kind": 54,
              "pos": 15,
            },
          ],
        },
        "end": 19,
        "kind": 56,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 6,
          "fullPos": 4,
          "id": "f",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 5,
        },
        "params": Array [
          Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "v",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
        ],
        "pos": 0,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 23,
        "expression": Object {
          "__debugKind": "FunctionCallExpression",
          "args": Array [
            Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 23,
              "kind": 35,
              "pos": 20,
              "subToken": undefined,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 22,
                "fullPos": 20,
                "kind": 19,
                "leadingIndent": 0,
                "pos": 20,
                "value": "10",
              },
            },
          ],
          "end": 23,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 20,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 19,
              "fullPos": 16,
              "id": "f",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 18,
            },
            "kind": 36,
            "pos": 18,
          },
          "kind": 44,
          "pos": 18,
        },
        "kind": 57,
        "pos": 18,
      },
    ],
  },
  "end": 23,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 23,
    "fullPos": 23,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 23,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-get-shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 4,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 4,
        "expression": Object {
          "__debugKind": "GetShorthand",
          "args": Array [
            Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 4,
              "kind": 35,
              "pos": 2,
              "subToken": undefined,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 3,
                "fullPos": 2,
                "kind": 19,
                "leadingIndent": 0,
                "pos": 2,
                "value": "1",
              },
            },
          ],
          "end": 4,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "a",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 59,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 4,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-global-variable 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 10,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "GlobalVariableStatement",
        "end": 10,
        "initializer": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 10,
          "kind": 35,
          "pos": 8,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 10,
            "fullPos": 7,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 8,
            "value": "42",
          },
        },
        "kind": 55,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 5,
          "fullPos": 3,
          "id": "x",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 4,
        },
        "pos": 0,
      },
    ],
  },
  "end": 10,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 10,
    "fullPos": 10,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 10,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-if-expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 43,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 43,
        "expression": Object {
          "__debugKind": "IfExpression",
          "condition": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 5,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 4,
              "fullPos": 2,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 3,
            },
            "kind": 36,
            "pos": 3,
          },
          "elseStatement": Object {
            "__debugKind": "SequenceOfStatements",
            "end": 43,
            "kind": 53,
            "pos": 32,
            "statements": Array [
              Object {
                "__debugKind": "LocalExpressionStatement",
                "end": 43,
                "expression": Object {
                  "__debugKind": "PrintingExpression",
                  "args": Array [],
                  "end": 43,
                  "format": Object {
                    "__debugKind": "StringLiteralToken",
                    "end": 42,
                    "fullPos": 39,
                    "kind": 20,
                    "leadingIndent": 4,
                    "pos": 39,
                    "value": "B",
                  },
                  "kind": 37,
                  "pos": 32,
                },
                "kind": 54,
                "pos": 32,
              },
            ],
          },
          "end": 43,
          "kind": 46,
          "pos": 0,
          "thenStatement": Object {
            "__debugKind": "SequenceOfStatements",
            "end": 26,
            "kind": 53,
            "pos": 10,
            "statements": Array [
              Object {
                "__debugKind": "LocalExpressionStatement",
                "end": 26,
                "expression": Object {
                  "__debugKind": "PrintingExpression",
                  "args": Array [],
                  "end": 26,
                  "format": Object {
                    "__debugKind": "StringLiteralToken",
                    "end": 20,
                    "fullPos": 17,
                    "kind": 20,
                    "leadingIndent": 4,
                    "pos": 17,
                    "value": "A",
                  },
                  "kind": 37,
                  "pos": 10,
                },
                "kind": 54,
                "pos": 10,
              },
            ],
          },
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 43,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 43,
    "fullPos": 43,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 43,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-if-expression-with-if-only 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 21,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 21,
        "expression": Object {
          "__debugKind": "IfExpression",
          "condition": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 5,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 4,
              "fullPos": 2,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 3,
            },
            "kind": 36,
            "pos": 3,
          },
          "elseStatement": undefined,
          "end": 21,
          "kind": 46,
          "pos": 0,
          "thenStatement": Object {
            "__debugKind": "SequenceOfStatements",
            "end": 21,
            "kind": 53,
            "pos": 10,
            "statements": Array [
              Object {
                "__debugKind": "LocalExpressionStatement",
                "end": 21,
                "expression": Object {
                  "__debugKind": "PrintingExpression",
                  "args": Array [],
                  "end": 21,
                  "format": Object {
                    "__debugKind": "StringLiteralToken",
                    "end": 20,
                    "fullPos": 17,
                    "kind": 20,
                    "leadingIndent": 4,
                    "pos": 17,
                    "value": "A",
                  },
                  "kind": 37,
                  "pos": 10,
                },
                "kind": 54,
                "pos": 10,
              },
            ],
          },
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 21,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 21,
    "fullPos": 21,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 21,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-integer 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 20,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 4,
        "expression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 4,
          "kind": 35,
          "pos": 0,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 1,
            "fullPos": 0,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 0,
            "value": "1",
          },
        },
        "kind": 57,
        "pos": 0,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 15,
        "expression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 15,
          "kind": 35,
          "pos": 2,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 4,
            "fullPos": 1,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 2,
            "value": "42",
          },
        },
        "kind": 57,
        "pos": 2,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 17,
        "expression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 17,
          "kind": 35,
          "pos": 5,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 15,
            "fullPos": 4,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 5,
            "value": "2333333333",
          },
        },
        "kind": 57,
        "pos": 5,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 20,
        "expression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 20,
          "kind": 35,
          "pos": 16,
          "subToken": Object {
            "__debugKind": "SubToken",
            "end": 17,
            "fullPos": 15,
            "kind": 10,
            "leadingIndent": 0,
            "pos": 16,
          },
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 18,
            "fullPos": 17,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 17,
            "value": "1",
          },
        },
        "kind": 57,
        "pos": 16,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 20,
        "expression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 20,
          "kind": 35,
          "pos": 19,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 20,
            "fullPos": 18,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 19,
            "value": "0",
          },
        },
        "kind": 57,
        "pos": 19,
      },
    ],
  },
  "end": 20,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 20,
    "fullPos": 20,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 20,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-local-expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 4,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 4,
        "expression": Object {
          "__debugKind": "FunctionCallExpression",
          "args": Array [
            Object {
              "__debugKind": "VariableReferenceExpression",
              "end": 4,
              "id": Object {
                "__debugKind": "Identifier",
                "end": 3,
                "fullPos": 2,
                "id": "x",
                "kind": 21,
                "leadingIndent": 0,
                "pos": 2,
              },
              "kind": 36,
              "pos": 2,
            },
          ],
          "end": 4,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "f",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 44,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 4,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-local-variable 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 11,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "GlobalVariableStatement",
        "end": 11,
        "initializer": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 11,
          "kind": 35,
          "pos": 8,
          "subToken": undefined,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 10,
            "fullPos": 7,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 8,
            "value": "42",
          },
        },
        "kind": 55,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 5,
          "fullPos": 3,
          "id": "x",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 4,
        },
        "pos": 0,
      },
    ],
  },
  "end": 11,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 11,
    "fullPos": 10,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 10,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-method-call 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 7,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 7,
        "expression": Object {
          "__debugKind": "MethodCallExpression",
          "args": Array [
            Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 7,
              "kind": 35,
              "pos": 4,
              "subToken": undefined,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 6,
                "fullPos": 4,
                "kind": 19,
                "leadingIndent": 0,
                "pos": 4,
                "value": "10",
              },
            },
          ],
          "end": 7,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "o",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 41,
          "name": Object {
            "__debugKind": "Identifier",
            "end": 3,
            "fullPos": 2,
            "id": "f",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 2,
          },
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 7,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 7,
    "fullPos": 7,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 7,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-null 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 4,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 4,
        "expression": Object {
          "__debugKind": "NullExpression",
          "end": 4,
          "kind": 39,
          "pos": 0,
          "token": Object {
            "__debugKind": "NullKeyword",
            "end": 4,
            "fullPos": 0,
            "kind": 24,
            "leadingIndent": 0,
            "pos": 0,
          },
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 4,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-object-without-extends 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 53,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 53,
        "expression": Object {
          "__debugKind": "ObjectsExpression",
          "end": 53,
          "extendsClause": undefined,
          "kind": 40,
          "pos": 0,
          "slots": Array [
            Object {
              "__debugKind": "VariableSlot",
              "end": 33,
              "initializer": Object {
                "__debugKind": "IntegerLiteralExpression",
                "end": 33,
                "kind": 35,
                "pos": 20,
                "subToken": undefined,
                "value": Object {
                  "__debugKind": "IntegerLiteralToken",
                  "end": 22,
                  "fullPos": 19,
                  "kind": 19,
                  "leadingIndent": 4,
                  "pos": 20,
                  "value": "10",
                },
              },
              "kind": 50,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 17,
                "fullPos": 15,
                "id": "x",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 16,
              },
              "pos": 12,
            },
            Object {
              "__debugKind": "MethodSlot",
              "body": Object {
                "__debugKind": "SequenceOfStatements",
                "end": 53,
                "kind": 53,
                "pos": 47,
                "statements": Array [
                  Object {
                    "__debugKind": "LocalExpressionStatement",
                    "end": 53,
                    "expression": Object {
                      "__debugKind": "SlotLookupExpression",
                      "end": 53,
                      "expression": Object {
                        "__debugKind": "ThisExpression",
                        "end": 52,
                        "kind": 48,
                        "pos": 47,
                      },
                      "kind": 42,
                      "name": Object {
                        "__debugKind": "Identifier",
                        "end": 53,
                        "fullPos": 52,
                        "id": "x",
                        "kind": 21,
                        "leadingIndent": 8,
                        "pos": 52,
                      },
                      "pos": 47,
                    },
                    "kind": 54,
                    "pos": 47,
                  },
                ],
              },
              "end": 53,
              "kind": 51,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 35,
                "fullPos": 33,
                "id": "f",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 34,
              },
              "params": Array [],
              "pos": 27,
            },
          ],
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 53,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 53,
    "fullPos": 53,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 53,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-objects 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 56,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 56,
        "expression": Object {
          "__debugKind": "ObjectsExpression",
          "end": 56,
          "extendsClause": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 9,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 8,
              "fullPos": 7,
              "id": "p",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 7,
            },
            "kind": 36,
            "pos": 7,
          },
          "kind": 40,
          "pos": 0,
          "slots": Array [
            Object {
              "__debugKind": "VariableSlot",
              "end": 36,
              "initializer": Object {
                "__debugKind": "IntegerLiteralExpression",
                "end": 36,
                "kind": 35,
                "pos": 23,
                "subToken": undefined,
                "value": Object {
                  "__debugKind": "IntegerLiteralToken",
                  "end": 25,
                  "fullPos": 22,
                  "kind": 19,
                  "leadingIndent": 4,
                  "pos": 23,
                  "value": "10",
                },
              },
              "kind": 50,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 20,
                "fullPos": 18,
                "id": "x",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 19,
              },
              "pos": 15,
            },
            Object {
              "__debugKind": "MethodSlot",
              "body": Object {
                "__debugKind": "SequenceOfStatements",
                "end": 56,
                "kind": 53,
                "pos": 50,
                "statements": Array [
                  Object {
                    "__debugKind": "LocalExpressionStatement",
                    "end": 56,
                    "expression": Object {
                      "__debugKind": "SlotLookupExpression",
                      "end": 56,
                      "expression": Object {
                        "__debugKind": "ThisExpression",
                        "end": 55,
                        "kind": 48,
                        "pos": 50,
                      },
                      "kind": 42,
                      "name": Object {
                        "__debugKind": "Identifier",
                        "end": 56,
                        "fullPos": 55,
                        "id": "x",
                        "kind": 21,
                        "leadingIndent": 8,
                        "pos": 55,
                      },
                      "pos": 50,
                    },
                    "kind": 54,
                    "pos": 50,
                  },
                ],
              },
              "end": 56,
              "kind": 51,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 38,
                "fullPos": 36,
                "id": "f",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 37,
              },
              "params": Array [],
              "pos": 30,
            },
          ],
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 56,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 56,
    "fullPos": 56,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 56,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-objects-and-slots 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 75,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 75,
        "expression": Object {
          "__debugKind": "ObjectsExpression",
          "end": 75,
          "extendsClause": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 9,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 8,
              "fullPos": 7,
              "id": "p",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 7,
            },
            "kind": 36,
            "pos": 7,
          },
          "kind": 40,
          "pos": 0,
          "slots": Array [
            Object {
              "__debugKind": "VariableSlot",
              "end": 36,
              "initializer": Object {
                "__debugKind": "IntegerLiteralExpression",
                "end": 36,
                "kind": 35,
                "pos": 23,
                "subToken": undefined,
                "value": Object {
                  "__debugKind": "IntegerLiteralToken",
                  "end": 25,
                  "fullPos": 22,
                  "kind": 19,
                  "leadingIndent": 4,
                  "pos": 23,
                  "value": "10",
                },
              },
              "kind": 50,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 20,
                "fullPos": 18,
                "id": "x",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 19,
              },
              "pos": 15,
            },
            Object {
              "__debugKind": "MethodSlot",
              "body": Object {
                "__debugKind": "SequenceOfStatements",
                "end": 75,
                "kind": 53,
                "pos": 57,
                "statements": Array [
                  Object {
                    "__debugKind": "LocalExpressionStatement",
                    "end": 75,
                    "expression": Object {
                      "__debugKind": "BinaryShorthand",
                      "end": 75,
                      "kind": 58,
                      "left": Object {
                        "__debugKind": "SlotLookupExpression",
                        "end": 65,
                        "expression": Object {
                          "__debugKind": "ThisExpression",
                          "end": 62,
                          "kind": 48,
                          "pos": 57,
                        },
                        "kind": 42,
                        "name": Object {
                          "__debugKind": "Identifier",
                          "end": 63,
                          "fullPos": 62,
                          "id": "x",
                          "kind": 21,
                          "leadingIndent": 8,
                          "pos": 62,
                        },
                        "pos": 57,
                      },
                      "operator": Object {
                        "__debugKind": "AddToken",
                        "end": 65,
                        "fullPos": 63,
                        "kind": 9,
                        "leadingIndent": 8,
                        "pos": 64,
                      },
                      "pos": 57,
                      "right": Object {
                        "__debugKind": "BinaryShorthand",
                        "end": 75,
                        "kind": 58,
                        "left": Object {
                          "__debugKind": "VariableReferenceExpression",
                          "end": 69,
                          "id": Object {
                            "__debugKind": "Identifier",
                            "end": 67,
                            "fullPos": 65,
                            "id": "x",
                            "kind": 21,
                            "leadingIndent": 8,
                            "pos": 66,
                          },
                          "kind": 36,
                          "pos": 66,
                        },
                        "operator": Object {
                          "__debugKind": "AddToken",
                          "end": 69,
                          "fullPos": 67,
                          "kind": 9,
                          "leadingIndent": 8,
                          "pos": 68,
                        },
                        "pos": 66,
                        "right": Object {
                          "__debugKind": "BinaryShorthand",
                          "end": 75,
                          "kind": 58,
                          "left": Object {
                            "__debugKind": "VariableReferenceExpression",
                            "end": 73,
                            "id": Object {
                              "__debugKind": "Identifier",
                              "end": 71,
                              "fullPos": 69,
                              "id": "y",
                              "kind": 21,
                              "leadingIndent": 8,
                              "pos": 70,
                            },
                            "kind": 36,
                            "pos": 70,
                          },
                          "operator": Object {
                            "__debugKind": "AddToken",
                            "end": 73,
                            "fullPos": 71,
                            "kind": 9,
                            "leadingIndent": 8,
                            "pos": 72,
                          },
                          "pos": 70,
                          "right": Object {
                            "__debugKind": "VariableReferenceExpression",
                            "end": 75,
                            "id": Object {
                              "__debugKind": "Identifier",
                              "end": 75,
                              "fullPos": 73,
                              "id": "z",
                              "kind": 21,
                              "leadingIndent": 8,
                              "pos": 74,
                            },
                            "kind": 36,
                            "pos": 74,
                          },
                        },
                      },
                    },
                    "kind": 54,
                    "pos": 57,
                  },
                ],
              },
              "end": 75,
              "kind": 51,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 38,
                "fullPos": 36,
                "id": "f",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 37,
              },
              "params": Array [
                Object {
                  "__debugKind": "Identifier",
                  "end": 40,
                  "fullPos": 39,
                  "id": "x",
                  "kind": 21,
                  "leadingIndent": 4,
                  "pos": 39,
                },
                Object {
                  "__debugKind": "Identifier",
                  "end": 43,
                  "fullPos": 41,
                  "id": "y",
                  "kind": 21,
                  "leadingIndent": 4,
                  "pos": 42,
                },
                Object {
                  "__debugKind": "Identifier",
                  "end": 46,
                  "fullPos": 44,
                  "id": "z",
                  "kind": 21,
                  "leadingIndent": 4,
                  "pos": 45,
                },
              ],
              "pos": 30,
            },
          ],
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 75,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 75,
    "fullPos": 75,
    "kind": 33,
    "leadingIndent": 8,
    "pos": 75,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-printf 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 32,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 32,
        "expression": Object {
          "__debugKind": "PrintingExpression",
          "args": Array [
            Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 32,
              "kind": 35,
              "pos": 30,
              "subToken": undefined,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 31,
                "fullPos": 29,
                "kind": 19,
                "leadingIndent": 0,
                "pos": 30,
                "value": "8",
              },
            },
          ],
          "end": 32,
          "format": Object {
            "__debugKind": "StringLiteralToken",
            "end": 27,
            "fullPos": 8,
            "kind": 20,
            "leadingIndent": 0,
            "pos": 8,
            "value": " My age is ~.\\\\ n ",
          },
          "kind": 37,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 32,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 32,
    "fullPos": 32,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 32,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-set-shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 8,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 8,
        "expression": Object {
          "__debugKind": "SetShorthand",
          "args": Array [
            Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 4,
              "kind": 35,
              "pos": 2,
              "subToken": undefined,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 3,
                "fullPos": 2,
                "kind": 19,
                "leadingIndent": 0,
                "pos": 2,
                "value": "1",
              },
            },
          ],
          "end": 8,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "a",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 60,
          "pos": 0,
          "value": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 8,
            "kind": 35,
            "pos": 7,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 8,
              "fullPos": 6,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 7,
              "value": "0",
            },
          },
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 8,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 8,
    "fullPos": 8,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 8,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-slot-assignment 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 26,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 15,
        "expression": Object {
          "__debugKind": "SlotAssignmentExpression",
          "end": 15,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "o",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 43,
          "name": Object {
            "__debugKind": "Identifier",
            "end": 7,
            "fullPos": 2,
            "id": "field",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 2,
          },
          "pos": 0,
          "value": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 15,
            "kind": 35,
            "pos": 10,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 12,
              "fullPos": 9,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 10,
              "value": "42",
            },
          },
        },
        "kind": 57,
        "pos": 0,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 26,
        "expression": Object {
          "__debugKind": "SlotAssignmentExpression",
          "end": 26,
          "expression": Object {
            "__debugKind": "SlotLookupExpression",
            "end": 20,
            "expression": Object {
              "__debugKind": "SlotLookupExpression",
              "end": 18,
              "expression": Object {
                "__debugKind": "VariableReferenceExpression",
                "end": 16,
                "id": Object {
                  "__debugKind": "Identifier",
                  "end": 15,
                  "fullPos": 12,
                  "id": "a",
                  "kind": 21,
                  "leadingIndent": 0,
                  "pos": 14,
                },
                "kind": 36,
                "pos": 14,
              },
              "kind": 42,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 17,
                "fullPos": 16,
                "id": "b",
                "kind": 21,
                "leadingIndent": 0,
                "pos": 16,
              },
              "pos": 14,
            },
            "kind": 42,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 19,
              "fullPos": 18,
              "id": "c",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 18,
            },
            "pos": 18,
          },
          "kind": 43,
          "name": Object {
            "__debugKind": "Identifier",
            "end": 21,
            "fullPos": 20,
            "id": "d",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 20,
          },
          "pos": 20,
          "value": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 26,
            "kind": 35,
            "pos": 24,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 26,
              "fullPos": 23,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 24,
              "value": "42",
            },
          },
        },
        "kind": 57,
        "pos": 14,
      },
    ],
  },
  "end": 26,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 26,
    "fullPos": 26,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 26,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-slot-lookup 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 16,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 10,
        "expression": Object {
          "__debugKind": "SlotLookupExpression",
          "end": 10,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "o",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 42,
          "name": Object {
            "__debugKind": "Identifier",
            "end": 7,
            "fullPos": 2,
            "id": "field",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 2,
          },
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 16,
        "expression": Object {
          "__debugKind": "SlotLookupExpression",
          "end": 16,
          "expression": Object {
            "__debugKind": "SlotLookupExpression",
            "end": 15,
            "expression": Object {
              "__debugKind": "SlotLookupExpression",
              "end": 13,
              "expression": Object {
                "__debugKind": "VariableReferenceExpression",
                "end": 11,
                "id": Object {
                  "__debugKind": "Identifier",
                  "end": 10,
                  "fullPos": 7,
                  "id": "a",
                  "kind": 21,
                  "leadingIndent": 0,
                  "pos": 9,
                },
                "kind": 36,
                "pos": 9,
              },
              "kind": 42,
              "name": Object {
                "__debugKind": "Identifier",
                "end": 12,
                "fullPos": 11,
                "id": "b",
                "kind": 21,
                "leadingIndent": 0,
                "pos": 11,
              },
              "pos": 9,
            },
            "kind": 42,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 14,
              "fullPos": 13,
              "id": "c",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 13,
            },
            "pos": 13,
          },
          "kind": 42,
          "name": Object {
            "__debugKind": "Identifier",
            "end": 16,
            "fullPos": 15,
            "id": "d",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 15,
          },
          "pos": 15,
        },
        "kind": 57,
        "pos": 9,
      },
    ],
  },
  "end": 16,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 16,
    "fullPos": 16,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 16,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-top-level-expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 4,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 4,
        "expression": Object {
          "__debugKind": "FunctionCallExpression",
          "args": Array [
            Object {
              "__debugKind": "VariableReferenceExpression",
              "end": 4,
              "id": Object {
                "__debugKind": "Identifier",
                "end": 3,
                "fullPos": 2,
                "id": "x",
                "kind": 21,
                "leadingIndent": 0,
                "pos": 2,
              },
              "kind": 36,
              "pos": 2,
            },
          ],
          "end": 4,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 2,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 1,
              "fullPos": 0,
              "id": "f",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 0,
            },
            "kind": 36,
            "pos": 0,
          },
          "kind": 44,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 4,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 4,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-variable-assignment 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 6,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 6,
        "expression": Object {
          "__debugKind": "VariableAssignmentExpression",
          "end": 6,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 45,
          "pos": 0,
          "value": Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 6,
            "kind": 35,
            "pos": 4,
            "subToken": undefined,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 6,
              "fullPos": 3,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 4,
              "value": "42",
            },
          },
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 6,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 6,
    "fullPos": 6,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 6,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-variable-reference 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 1,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 1,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 1,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 1,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 1,
    "fullPos": 1,
    "kind": 33,
    "leadingIndent": 0,
    "pos": 1,
  },
  "kind": 34,
  "pos": 0,
}
`;

exports[`Parser should-work-with-while-expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "body": Object {
    "__debugKind": "SequenceOfStatements",
    "end": 22,
    "kind": 53,
    "pos": 0,
    "statements": Array [
      Object {
        "__debugKind": "TopLevelExpressionStatement",
        "end": 22,
        "expression": Object {
          "__debugKind": "WhileExpression",
          "body": Object {
            "__debugKind": "SequenceOfStatements",
            "end": 22,
            "kind": 53,
            "pos": 13,
            "statements": Array [
              Object {
                "__debugKind": "LocalExpressionStatement",
                "end": 22,
                "expression": Object {
                  "__debugKind": "VariableAssignmentExpression",
                  "end": 22,
                  "id": Object {
                    "__debugKind": "Identifier",
                    "end": 14,
                    "fullPos": 8,
                    "id": "x",
                    "kind": 21,
                    "leadingIndent": 4,
                    "pos": 13,
                  },
                  "kind": 45,
                  "pos": 13,
                  "value": Object {
                    "__debugKind": "BinaryShorthand",
                    "end": 22,
                    "kind": 58,
                    "left": Object {
                      "__debugKind": "VariableReferenceExpression",
                      "end": 20,
                      "id": Object {
                        "__debugKind": "Identifier",
                        "end": 18,
                        "fullPos": 16,
                        "id": "x",
                        "kind": 21,
                        "leadingIndent": 4,
                        "pos": 17,
                      },
                      "kind": 36,
                      "pos": 17,
                    },
                    "operator": Object {
                      "__debugKind": "AddToken",
                      "end": 20,
                      "fullPos": 18,
                      "kind": 9,
                      "leadingIndent": 4,
                      "pos": 19,
                    },
                    "pos": 17,
                    "right": Object {
                      "__debugKind": "VariableReferenceExpression",
                      "end": 22,
                      "id": Object {
                        "__debugKind": "Identifier",
                        "end": 22,
                        "fullPos": 20,
                        "id": "y",
                        "kind": 21,
                        "leadingIndent": 4,
                        "pos": 21,
                      },
                      "kind": 36,
                      "pos": 21,
                    },
                  },
                },
                "kind": 54,
                "pos": 13,
              },
            ],
          },
          "condition": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 8,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 7,
              "fullPos": 5,
              "id": "x",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 6,
            },
            "kind": 36,
            "pos": 6,
          },
          "end": 22,
          "kind": 47,
          "pos": 0,
        },
        "kind": 57,
        "pos": 0,
      },
    ],
  },
  "end": 22,
  "eof": Object {
    "__debugKind": "EndOfFileToken",
    "end": 22,
    "fullPos": 22,
    "kind": 33,
    "leadingIndent": 4,
    "pos": 22,
  },
  "kind": 34,
  "pos": 0,
}
`;
